Update file structure to separate js files from index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>JS Calculator</title>
   </head>
   <body>
-    <script href="calculator.js" type="javascript/text"></script>
+    <script type="text/javascript" href="./js/calculator.js"></script>
   </body>
 </html>
