--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>JS Calculator</title>
   </head>
   <body>
-    <script type="text/javascript" href="./js/calculator.js"></script>
+    <script type="text/javascript" src="./js/calculator.js"></script>
   </body>
 </html>
