--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>JS Calculator</title>
   </head>
   <body>
+    <h1>Cool Calculator</h1>
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
