Update number button order

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>JS Calculator</title>
   </head>
   <body>
-    <h1>Cool Calculator</h1>
+    <h1>Taiao's Cool Calculator</h1>
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
