Remove DOM elements and use static HTML instead

--- a/index.html
+++ b/index.html
@@ -4,11 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>JS Calculator</title>
   </head>
   <body>
     <h1>Taiao's Cool Calculator</h1>
+    <div id="calc-container">
+      <div id="display-container">
+        <div id="calc-display-two">8888</div>
+        <div id="operator-display">x</div>
+        <div id="calc-display">8888</div>
+      </div>
+      <div id="button-container">
+        <button id="1-btn" class="calc-btn">1</button
+        ><button id="2-btn" class="calc-btn">2</button
+        ><button id="3-btn" class="calc-btn">3</button
+        ><button id="4-btn" class="calc-btn">4</button
+        ><button id="5-btn" class="calc-btn">5</button
+        ><button id="6-btn" class="calc-btn">6</button
+        ><button id="7-btn" class="calc-btn">7</button
+        ><button id="8-btn" class="calc-btn">8</button
+        ><button id="9-btn" class="calc-btn">9</button
+        ><button id="0-btn" class="calc-btn">0</button
+        ><button id="add-btn" class="calc-btn">+</button
+        ><button id="sub-btn" class="calc-btn">-</button
+        ><button id="mult-btn" class="calc-btn">x</button
+        ><button id="div-btn" class="calc-btn">÷</button
+        ><button id="equ-btn" class="calc-btn">=</button
+        ><button id="clear-btn" class="calc-btn">C</button>
+      </div>
+    </div>
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
