Update calculator function to allow multiple numbers

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h1>Taiao's Cool Calculator</h1>
     <div id="calc-container">
       <div id="display-container">
-        <div id="calc-display-two">8888</div>
-        <div id="operator-display">x</div>
-        <div id="calc-display">8888</div>
+        <div id="calc-display-two"></div>
+        <div id="operator-display"></div>
+        <div id="calc-display"></div>
       </div>
       <div id="button-container">
         <button id="1-btn" class="calc-btn">1</button
