Update calculator functions, add backspace

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         ><button id="mult-btn" class="calc-btn">x</button
         ><button id="div-btn" class="calc-btn">÷</button
         ><button id="equ-btn" class="calc-btn">=</button
+        ><button id="backspace" class="calc-btn">⬅</button
         ><button id="clear-btn" class="calc-btn">C</button>
       </div>
     </div>
