--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>JS Calculator</title>
   </head>
   <body>
-    <h1>Taiao's Cool Calculator</h1>
+    <h1>JS Calculator</h1>
     <div id="calc-container">
       <div id="display-container">
         <div id="calc-display-two"></div>
@@ -26,11 +26,11 @@
         ><button id="8-btn" class="calc-btn">8</button
         ><button id="9-btn" class="calc-btn">9</button
         ><button id="0-btn" class="calc-btn">0</button
-        ><button id="add-btn" class="calc-btn">+</button
-        ><button id="sub-btn" class="calc-btn">-</button
-        ><button id="mult-btn" class="calc-btn">x</button
-        ><button id="div-btn" class="calc-btn">÷</button
-        ><button id="equ-btn" class="calc-btn">=</button
+        ><button id="add-btn" class="calc-btn op-btn">+</button
+        ><button id="sub-btn" class="calc-btn op-btn">-</button
+        ><button id="mult-btn" class="calc-btn op-btn">x</button
+        ><button id="div-btn" class="calc-btn op-btn">÷</button
+        ><button id="equ-btn" class="calc-btn op-btn">=</button
         ><button id="backspace" class="calc-btn">⬅</button
         ><button id="clear-btn" class="calc-btn">C</button>
       </div>
