--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
         ><button id="clear-btn" class="calc-btn">C</button>
       </div>
     </div>
+    <audio
+      id="ui-click"
+      src="/sound/536108__eminyildirim__ui-click.wav"
+    ></audio>
+    <audio
+      id="equals-click"
+      src="/sound/506053__mellau__button-click-2.wav"
+    ></audio>
+    <audio
+      id="clear-sound"
+      src="sound/657946__matrixxx__horror-inspect-sound-ui-or-in-game-notification-02.wav"
+    ></audio>
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
