Add github icon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/a98309b31a.js"
+      crossorigin="anonymous"
+    ></script>
     <title>JS Calculator</title>
   </head>
   <body>
@@ -35,10 +39,7 @@
         ><button id="clear-btn" class="calc-btn">C</button>
       </div>
     </div>
-    <audio
-      id="ui-click"
-      src="sound/536108__eminyildirim__ui-click.wav"
-    ></audio>
+    <audio id="ui-click" src="sound/536108__eminyildirim__ui-click.wav"></audio>
     <audio
       id="equals-click"
       src="sound/506053__mellau__button-click-2.wav"
@@ -48,5 +49,9 @@
       src="sound/657946__matrixxx__horror-inspect-sound-ui-or-in-game-notification-02.wav"
     ></audio>
     <script type="module" src="./js/main.js"></script>
+      <a href="https://github.com/flowtyf/JS-Calculator" target="_blank"
+        ><i class="fa-brands fa-github"></i
+      ></a>
+    </h2>
   </body>
 </html>
